--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,3 +6,24 @@
 
 <div>First Leage</div>
 
+
+<div>Second div</div>
+
+<div class="container-fluid details-testmonial-container">
+    <div class="row p-1 g-0">
+      <h1 class="details-testmonials-title">what do our participants say?</h1>
+  <div   class="col-lg-4 col-md-6 col-sm-12">
+    <div class="card m-1 mx-3 mb-4 pb-2 cards-style" >
+        <img src="" class="img-fluid testmonial-img " alt="">
+    
+        <div class="card-body">
+          <h5 class="card-title"><b></b></h5>
+          <p class="card-text pb-4"></p>
+          <p class="card-text"><small class="text-muted"></small></p>
+          <p class="card-text"><small class="text-muted"></small></p>
+        </div>
+      </div>
+    
+   
+    
+   
