--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -17,7 +17,7 @@
         <img src="" class="img-fluid testmonial-img " alt="">
     
         <div class="card-body">
-          <h5 class="card-title"><b></b></h5>
+          <h5 class="card-title"><b>DAY-1</b></h5>
           <p class="card-text pb-4"></p>
           <p class="card-text"><small class="text-muted"></small></p>
           <p class="card-text"><small class="text-muted"></small></p>
